--- a/PersonalPortal/PersonalPortal/Style/Css/HelloWorld.css
+++ b/PersonalPortal/PersonalPortal/Style/Css/HelloWorld.css
@@ -7,6 +7,12 @@
     margin: 0 !important;
 }
 
+.hint {
+    padding: 6px 35px 6px 15px;
+    margin-top: 5px;
+    margin-bottom: 0;
+}
+
 .main {
     margin: 0;
     color: white;
