--- a/PersonalPortal/PersonalPortal/Views/HelloWorld.html
+++ b/PersonalPortal/PersonalPortal/Views/HelloWorld.html
@@ -83,6 +83,7 @@
                 <li><a href="https://github.com/twbs/bootstrap" target="_blank">Bootstrap</a></li>
                 <li><a href="https://github.com/angular/angular.js" target="_blank">AngularJS</a></li>
                 <li><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">Developer</a></li>
+                <li><a href="https://github.com/beautify-web/js-beautify/" target="_blank">js-beautify</a></li>
             </ul>
         </div>
     </footer>
