--- a/PersonalPortal/PersonalPortal/Scripts/CodeMirror/theme/mdn-like.css
+++ b/PersonalPortal/PersonalPortal/Scripts/CodeMirror/theme/mdn-like.css
@@ -29,7 +29,7 @@
 
 .cm-s-mdn-like .cm-operator { color: #cda869; }
 .cm-s-mdn-like .cm-comment { color:#777; font-weight:normal; }
-.cm-s-mdn-like .cm-string { color:#07a; font-style:italic; }
+.cm-s-mdn-like .cm-string { color:#07a; }
 .cm-s-mdn-like .cm-string-2 { color:#bd6b18; } 
 .cm-s-mdn-like .cm-meta { color: #000; } 
 .cm-s-mdn-like .cm-builtin { color: #9B7536; } 
