--- a/PersonalPortal/PersonalPortal/Views/Index.html
+++ b/PersonalPortal/PersonalPortal/Views/Index.html
@@ -30,12 +30,12 @@
                     <div class="row col-lg-6 input-group" style="padding:7px 15px;">
                         <input type="text" class="form-control" ng-model="searchText" ng-keypress="Enter($event,'search')" placeholder="搜索">
                         <div class="input-group-btn">
-                            <a id="search" class="btn btn-default" href="{{searchInfo[searchIndex].value+searchText}}" target="Frame">{{searchInfo[searchIndex].name}}</a>
+                            <a id="search" class="btn btn-default" href="{{SearchInfo[searchIndex].value+searchText}}" target="Frame">{{SearchInfo[searchIndex].name}}</a>
                             <button type="button" class="btn btn-default dropdown-toggle" style="padding-left:5px;padding-right:5px;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="caret"></span>&zwnj;
                             </button>
                             <ul class="dropdown-menu">
-                                <li ng-repeat="x in searchInfo">
+                                <li ng-repeat="x in SearchInfo">
                                     <a href="#" ng-click="SetValue('searchIndex', $index)">{{x.name}}</a>
                                 </li>
                             </ul>
@@ -73,15 +73,13 @@
         });
 
         Angular(function ($scope, factory) {
-            $scope.searchInfo = [{ "name": "百度搜索", "value": "https://www.baidu.com/s?wd=" }, { "name": "必应搜索", "value": "http://cn.bing.com/search?q=" }, { "name": "百度地图", "value": "http://map.baidu.com/?newmap=1&s=s%26wd%3D" }, { "name": "高德地图", "value": "http://ditu.amap.com/search?query=" }];
+            $scope.SearchInfo = [{ "name": "百度搜索", "value": "https://www.baidu.com/s?wd=" }, { "name": "必应搜索", "value": "http://cn.bing.com/search?q=" }, { "name": "百度地图", "value": "http://map.baidu.com/?newmap=1&s=s%26wd%3D" }, { "name": "高德地图", "value": "http://ditu.amap.com/search?query=" }];
+            $scope.Navigation = [{ "LinkName": "个人资料", "LinkUrl": "/Views/Resume.html", "Navigation": [] }, { "LinkName": "个人作品集", "LinkUrl": "/Views/Portfolio.html", "Navigation": [] }, { "LinkName": "个人工具箱", "LinkUrl": "#", "Navigation": [{ "LinkName": "Json验证及格式化", "LinkUrl": "/Views/ToolsBox/Json.html", "Navigation": [] }, { "LinkName": "数据加密解密", "LinkUrl": "/Views/ToolsBox/Encryption.html", "Navigation": [] }, { "LinkName": "正则表达式测试", "LinkUrl": "/Views/ToolsBox/Regexp.html", "Navigation": [] }, { "LinkName": "HTML/CSS美化", "LinkUrl": "/Views/ToolsBox/CodeBeautify.html", "Navigation": [] }] }];
             $scope.searchIndex = 0;
 
             $scope.SetValue = function (key, value) {
                 $scope[key] = value;
             }
-            factory.Query('/Controller/Index/GetIndex').then(function (data) {
-                $scope.Navigation = data.Navigation;
-            });
             $scope.Enter = factory.Enter;
         });
     </script>
