--- a/PersonalPortal/PersonalPortal/Views/Index.html
+++ b/PersonalPortal/PersonalPortal/Views/Index.html
@@ -28,15 +28,15 @@
                         </li>
                     </ul>
                     <div class="row col-lg-6 input-group" style="padding:7px 15px;">
-                        <input type="text" class="form-control" ng-model="searchText" ng-keypress="Enter($event,'search')" placeholder="搜索">
+                        <input type="text" class="form-control" ng-model="searchText" ng-keypress="Search($event)" placeholder="搜索">
                         <div class="input-group-btn">
-                            <a id="search" class="btn btn-default" href="{{SearchInfo[searchIndex].value+searchText}}" target="Frame">{{SearchInfo[searchIndex].name}}</a>
+                            <a id="search" class="btn btn-default" ng-click="Search()" ng-bind="SearchInfo[searchIndex].name"></a>
                             <button type="button" class="btn btn-default dropdown-toggle" style="padding-left:5px;padding-right:5px;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="caret"></span>&zwnj;
                             </button>
                             <ul class="dropdown-menu">
                                 <li ng-repeat="x in SearchInfo">
-                                    <a href="#" ng-click="SetValue('searchIndex', $index)">{{x.name}}</a>
+                                    <a href="#" ng-click="SetValue('searchIndex', $index)" ng-bind="x.name"></a>
                                 </li>
                             </ul>
                         </div>
@@ -80,7 +80,12 @@
             $scope.SetValue = function (key, value) {
                 $scope[key] = value;
             }
-            $scope.Enter = factory.Enter;
+
+            $scope.Search = function (event) {
+                if (event == null || event.keyCode == 13) {
+                    Frame.location = $scope.SearchInfo[$scope.searchIndex].value + encodeURIComponent($scope.searchText);
+                }
+            }
         });
     </script>
 </body>
